# rust-mandelbrot

./: Cargo.toml
.github/workflows/: release.yml
scripts/: version.rs
src/: main.rs
