[package]
name = "rust-mandelbrot"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
irospace = "0.0.1"
itertools = "0.11.0"
num = "0.4.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "version"
path = "scripts/version.rs"
